tools/flowc/tests/errors/error40b.flow
FuncStruct(func : (Union1) -> void);

Union1 ::= MyStruct1, MyStruct2;

Union2 ::= Union1, MyStruct3;
	MyStruct1();
	MyStruct2();
	MyStruct3();

foo(foo : FuncStruct) {
	foo.func(MyStruct3());	// func should not accept MyStruct3()
}
